--- a/Lab03/Lab3_111062117.ipynb
+++ b/Lab03/Lab3_111062117.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 2,
       "metadata": {
         "id": "LrwdtF6S8a91"
       },
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 3,
       "metadata": {
         "id": "9Ww4EQOSuP-O"
       },
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 32,
       "metadata": {
         "id": "TzDmrkBRYeg8"
       },
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 33,
       "metadata": {
         "id": "n7FOtfmHhjjh"
       },
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 34,
       "metadata": {
         "id": "lWY1A2Z3a-fM"
       },
@@ -320,10 +320,10 @@
         {
           "data": {
             "text/plain": [
-              "<__main__.Perceptron at 0x17c9cd970>"
+              "<__main__.Perceptron at 0x168138820>"
             ]
           },
-          "execution_count": 128,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -345,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 36,
       "metadata": {
         "id": "ShjMSQal2mS4"
       },
@@ -585,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 35,
       "metadata": {
         "id": "DU2sljAh_wfG"
       },
@@ -664,20 +664,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 37,
       "metadata": {
         "id": "HF6qQtvsGbCC"
       },
-      "outputs": [
-        {
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-108-6c5f8a9642ed>, line 8)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;36m  Cell \u001b[0;32mIn[108], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    S_W =\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def fisher_discriminant(X, y):\n",
         "  classes = np.unique(y)\n",
@@ -686,16 +677,19 @@
         "\n",
         "  ### START CODE HERE ###\n",
         "  # Compute within-class scatter matrix\n",
-        "  S_W =\n",
+        "  S_W = np.zeros((X.shape[1], X.shape[1]))\n",
+        "  for cls, mean_vec in zip(classes, mean_vectors):\n",
+        "    S_W += (X[y == cls] - mean_vec).T @ (X[y == cls] - mean_vec)\n",
         "\n",
         "  # Compute between-class scatter matrix\n",
-        "  S_B =\n",
+        "  mean_diff = (mean_vectors[1] - mean_vectors[0]).reshape(-1, 1)\n",
+        "  S_B = mean_diff @ mean_diff.T\n",
         "\n",
         "  # Compute the discriminant vector\n",
-        "  w =\n",
+        "  w = np.linalg.inv(S_W) @ (mean_vectors[1] - mean_vectors[0])\n",
         "\n",
         "  # Normalize the discriminant vector\n",
-        "  w =\n",
+        "  w = w / np.linalg.norm(w)\n",
         "  ### END CODE HERE ###\n",
         "\n",
         "  return w"
@@ -714,11 +708,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "I-ldjqUTH3TC"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[ 0.37541286  0.64630924 -0.66434144]\n"
+          ]
+        }
+      ],
       "source": [
         "# Get the discriminant\n",
         "# X_exp has been standardized\n",
@@ -737,7 +739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "OPMQBnAuT65h"
       },
@@ -746,10 +748,10 @@
         "def boundary_calculation(X_train_lda, y_train):\n",
         "  # Calculate the means and variances of the classes in the projected space\n",
         "  ### START CODE HERE ###\n",
-        "  mean_class_0 =\n",
-        "  mean_class_1 =\n",
+        "  mean_class_0 = np.mean(X_train_lda[y_train == 0])\n",
+        "  mean_class_1 = np.mean(X_train_lda[y_train == 1])\n",
         "\n",
-        "  decision_boundary =\n",
+        "  decision_boundary = (mean_class_0 + mean_class_1) / 2\n",
         "  ### END CODE HERE ###\n",
         "\n",
         "  return decision_boundary\n",
@@ -760,12 +762,12 @@
         "\n",
         "  ### START CODE HERE ###\n",
         "  # Project onto the first discriminant\n",
-        "  X_train_lda =\n",
-        "  X_test_lda =\n",
+        "  X_train_lda = X_train.dot(W)\n",
+        "  X_test_lda = X_test.dot(W)\n",
         "\n",
-        "  decision_boundary =\n",
+        "  decision_boundary = boundary_calculation(X_train_lda, y_train)\n",
         "\n",
-        "  y_pred =\n",
+        "  y_pred = np.where(X_test_lda >= decision_boundary, 1, 0)\n",
         "  ### END CODE HERE ###\n",
         "\n",
         "  return y_pred"
@@ -784,14 +786,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "id": "zwGyWfTze7Dd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.5028438197095305\n"
+          ]
+        }
+      ],
       "source": [
         "### START CODE HERE ###\n",
-        "X_exp_lda =\n",
+        "w = fisher_discriminant(X_exp, y_exp)\n",
+        "X_exp_lda = X_exp.dot(w)\n",
         "### END CODE HERE ###\n",
         "print(boundary_calculation(X_exp_lda, y_exp))"
       ]
@@ -807,11 +818,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "id": "45jpURFTVK-o"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 68.88%\n",
+            "\n",
+            "F1 Score: 0.6847649918962723\n"
+          ]
+        }
+      ],
       "source": [
         "# Classify the projected test data\n",
         "y_pred = lda_classifier(X_train, y_train, X_val)\n",
@@ -832,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "id": "YMLVi64KWOrL"
       },
