--- a/Lab03/Lab3_111062117.ipynb
+++ b/Lab03/Lab3_111062117.ipynb
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 54,
       "metadata": {
         "id": "TzDmrkBRYeg8"
       },
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 55,
       "metadata": {
         "id": "n7FOtfmHhjjh"
       },
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 56,
       "metadata": {
         "id": "lWY1A2Z3a-fM"
       },
@@ -320,10 +320,10 @@
         {
           "data": {
             "text/plain": [
-              "<__main__.Perceptron at 0x168138820>"
+              "<__main__.Perceptron at 0x168138580>"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 56,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -345,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 57,
       "metadata": {
         "id": "ShjMSQal2mS4"
       },
@@ -585,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 53,
       "metadata": {
         "id": "DU2sljAh_wfG"
       },
@@ -920,7 +920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "id": "B5wgzjcIcrqq"
       },
@@ -931,21 +931,21 @@
         "\n",
         "  ### START CODE HERE ###\n",
         "  # Calculate the means and variances of the classes in the projected space\n",
-        "  mean_class_0 =\n",
-        "  mean_class_1 =\n",
-        "  variance_class_0 =\n",
-        "  variance_class_1 =\n",
+        "  mean_class_0 = np.mean(X_train_lda[y_train == 0])\n",
+        "  mean_class_1 = np.mean(X_train_lda[y_train == 1])\n",
+        "  variance_class_0 = np.var(X_train_lda[y_train == 0])\n",
+        "  variance_class_1 = np.var(X_train_lda[y_train == 1])\n",
         "\n",
         "  # Calculate the prior probabilities\n",
-        "  prior_class_0 =\n",
-        "  prior_class_1 =\n",
+        "  prior_class_0 = np.mean(y_train == 0)\n",
+        "  prior_class_1 = np.mean(y_train == 1)\n",
         "  ### END CODE HERE ###\n",
         "\n",
         "  return mean_class_0, variance_class_0, prior_class_0, mean_class_1, variance_class_1, prior_class_1\n",
         "\n",
         "def likelihood(mean, variance, x): # implement the Gaussian density distribution function\n",
         "  ### START CODE HERE ###\n",
-        "  likelihood =\n",
+        "  likelihood = (1 / np.sqrt(2 * np.pi * variance)) * np.exp(-((x - mean) ** 2) / (2 * variance))\n",
         "  ### END CODE HERE ###\n",
         "  return likelihood\n",
         "\n",
@@ -955,15 +955,23 @@
         "\n",
         "  ### START CODE HERE ###\n",
         "  # Project onto the first discriminant\n",
-        "  X_train_lda =\n",
-        "  X_test_lda =\n",
+        "  X_train_lda = X_train.dot(W)\n",
+        "  X_test_lda = X_test.dot(W)\n",
         "  ### END CODE HERE ###\n",
         "\n",
         "  mean_class_0, variance_class_0, prior_class_0, mean_class_1, variance_class_1, prior_class_1 = mean_variance_prior(X_train_lda, y_train)\n",
         "\n",
         "  ### START CODE HERE ###\n",
         "  # Classify based on the maximum posterior probability\n",
-        "  predictions =\n",
+        "  predictions = []\n",
+        "  for x in X_test_lda:\n",
+        "    likelihood_0 = likelihood(mean_class_0, variance_class_0, x)\n",
+        "    posterior_0 = likelihood_0 * prior_class_0\n",
+        "\n",
+        "    likelihood_1 = likelihood(mean_class_1, variance_class_1, x)\n",
+        "    posterior_1 = likelihood_1 * prior_class_1\n",
+        "\n",
+        "    predictions.append(1 if posterior_1 > posterior_0 else 0)\n",
         "  ### END CODE HERE ###\n",
         "\n",
         "  return np.array(predictions)"
@@ -990,11 +998,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "ak9M6fWAnCBw"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "means: 0.0297971694827806 0.9762686734207663\n",
+            "variances: 0.3697251962248152 0.22878455291253327\n",
+            "priors: 0.8421052631578947 0.15789473684210525\n",
+            "likelihoods: 0.6560640840455648 0.11464725416998721\n"
+          ]
+        }
+      ],
       "source": [
         "mean_class_0, variance_class_0, prior_class_0, mean_class_1, variance_class_1, prior_class_1 = mean_variance_prior(X_exp_lda[:19], y_exp[:19])\n",
         "print(\"means:\", mean_class_0, mean_class_1)\n",
@@ -1014,11 +1033,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
         "id": "TOBXCOrlcqil"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 68.82%\n",
+            "\n",
+            "F1 Score: 0.6875125275606334\n"
+          ]
+        }
+      ],
       "source": [
         "# Classify the projected test data\n",
         "y_pred = lda_classifier_map(X_train, y_train, X_val)\n",
@@ -1039,7 +1068,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
         "id": "HTb1pDJVhzOJ"
       },
