--- a/Lab03/Lab3.ipynb
+++ b/Lab03/Lab3.ipynb
@@ -86,8 +86,8 @@
       "outputs": [],
       "source": [
         "### START CODE HERE ###\n",
-        "training_dataroot = './lab3_training.csv'\n",
-        "testing_dataroot = './lab3_testing.csv'\n",
+        "training_dataroot = './data/lab3_training.csv'\n",
+        "testing_dataroot = './data/lab3_testing.csv'\n",
         "\n",
         "output_path_part1 = './output/lab3_part1.csv'\n",
         "output_path_part2 = './output/lab3_part2.csv'\n",
